[hero] fix spacing

--- a/src/styles/hero/index.scss
+++ b/src/styles/hero/index.scss
@@ -1,5 +1,7 @@
 @import "cards";
 
 #hero {
+    margin-top: 0.5rem;
+
     background: $tertiary;
 }
